; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-bson.c_encode_bson_byorder.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-bson.c_encode_bson_byorder.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bson = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @encode_bson_byorder to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @encode_bson_byorder(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.bson*, align 8
  %5 = alloca i8*, align 8
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @lua_gettop(i32* %6)
  store i32 %7, i32* %3, align 4
  %8 = load i32*, i32** %2, align 8
  %9 = load i32, i32* %3, align 4
  %10 = call %struct.bson* @lua_touserdata(i32* %8, i32 %9)
  store %struct.bson* %10, %struct.bson** %4, align 8
  %11 = load i32*, i32** %2, align 8
  %12 = load i32, i32* %3, align 4
  %13 = add nsw i32 %12, -1
  store i32 %13, i32* %3, align 4
  %14 = call i32 @lua_settop(i32* %11, i32 %13)
  %15 = load i32*, i32** %2, align 8
  %16 = load %struct.bson*, %struct.bson** %4, align 8
  %17 = load i32, i32* %3, align 4
  %18 = call i32 @pack_ordered_dict(i32* %15, %struct.bson* %16, i32 %17, i32 0)
  %19 = load i32*, i32** %2, align 8
  %20 = call i32 @lua_settop(i32* %19, i32 0)
  %21 = load i32*, i32** %2, align 8
  %22 = load %struct.bson*, %struct.bson** %4, align 8
  %23 = getelementptr inbounds %struct.bson, %struct.bson* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i8* @lua_newuserdata(i32* %21, i32 %24)
  store i8* %25, i8** %5, align 8
  %26 = load i8*, i8** %5, align 8
  %27 = load %struct.bson*, %struct.bson** %4, align 8
  %28 = getelementptr inbounds %struct.bson, %struct.bson* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 4
  %30 = load %struct.bson*, %struct.bson** %4, align 8
  %31 = getelementptr inbounds %struct.bson, %struct.bson* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = call i32 @memcpy(i8* %26, i32 %29, i32 %32)
  ret i32 1
}

declare dso_local i32 @lua_gettop(i32*) #1

declare dso_local %struct.bson* @lua_touserdata(i32*, i32) #1

declare dso_local i32 @lua_settop(i32*, i32) #1

declare dso_local i32 @pack_ordered_dict(i32*, %struct.bson*, i32, i32) #1

declare dso_local i8* @lua_newuserdata(i32*, i32) #1

declare dso_local i32 @memcpy(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
